New version with api, pages and groups
